bugfix: volume range on full; feature: custom scrollbar for y-axis

--- a/src/components/ImageVideoViewer/style.module.scss
+++ b/src/components/ImageVideoViewer/style.module.scss
@@ -1,3 +1,4 @@
+@import "./../../styles/mixins.scss";
 .wrapper {
 	display: grid;
 	grid-auto-flow: column;
@@ -7,6 +8,18 @@
 	width: 100%;
 	padding: 1rem;
 	gap: 1rem;
+
+	justify-items: flex-start;
+	.items {
+		@include scrollbar-reset(0.4rem, "rounded", "y");
+		padding-bottom: 0.5rem;
+
+		display: flex;
+		gap: 1rem;
+		justify-content: flex-start;
+		justify-items: flex-start;
+		overflow-x: auto;
+	}
 	img {
 		width: 100%;
 		height: 100%;
